cppreference-doc (20170409-1.2) UNRELEASED; urgency=medium

  [ Rik Mills ]
  * Fix FTBFS with Qt5.
    - debian/rules: export QT_SELECT := qt5
    - debian/patches: upstream_fix-qch-build.patch

  [ Michael R. Crusoe ]
  * debhelper-compat 12
  * Standards-Version: 4.4.1
  * Secure URI in copyright format

 -- Rik Mills <rikmills@kde.org>  Thu, 21 Nov 2019 11:55:05 +0000

cppreference-doc (20170409-1.1) unstable; urgency=medium

  * Build using Qt5 (Closes: #874862)

 -- Moritz Muehlenhoff <jmm@debian.org>  Mon, 02 Sep 2019 20:26:32 +0200

cppreference-doc (20170409-1) unstable; urgency=low

  * New upstream release.
  * Refresh patches
    - drop 02-force-utf8-encoding.patch: integrated upstream
  * Override license-problem-gfdl-invariants warning for file that is actually
    licensed under GFDL-NIV.

 -- Povilas Kanapickas <povilas@radix.lt>  Sun, 9 Apr 2017 00:00:00 +0000

cppreference-doc (20151129+dfsg0-1) unstable; urgency=low

  * New upstream release.
  * Refresh patches
    - drop 03-remove_extra_license_files.patch; license files removed when
      repacking the archive.
    - update 02-force-utf8-encoding.patch

 -- Povilas Kanapickas <povilas@radix.lt>  Fri, 4 Dec 2015 00:00:00 +0000

cppreference-doc (20140827+dfsg0-1) unstable; urgency=low

  * New upstream release.
  * Drop dependencies on python and python-lxml as v3 counterparts are used
    exclusively.

 -- Povilas Kanapickas <povilas@radix.lt>  Wed, 27 Aug 2014 00:00:00 +0000

cppreference-doc (20140208+dfsg1-1) unstable; urgency=low

  * Initial release (Closes: #645513)
  * Repack upstream tarball to conform to the Debian Free Software Guidelines
    - include the original wiki-text from which the documentation can be
      regenerated if imported into a MediaWiki wiki.
    - include source of minified CSS and JS files

 -- Povilas Kanapickas <povilas@radix.lt>  Sat, 08 Feb 2014 00:00:00 +0000