@@ -9,6 +9,7 @@ cppreference-doc (20170409-1.2) UNRELEASED; urgency=medium
   * debhelper-compat 12
   * Standards-Version: 4.4.1
   * Secure URI in copyright format
+  * Remove old boilerplate from debian/rules
 
  -- Rik Mills <rikmills@kde.org>  Thu, 21 Nov 2019 11:55:05 +0000
 
